--- a/R/2017-agra-aasr.nb.html
+++ b/R/2017-agra-aasr.nb.html
@@ -578,11 +578,7 @@ This dataset also includes over 2,000 constructed climatic variables (monthly SP
 <p>Alvarez, S., Paas, W., Descheemaeker, K., Tittonell, P., &amp; Groot, J. (2014). Typology construction, a way of dealing with farm diversity: General guidelines for humidtropics. Retrieved from <a href="https://cgspace.cgiar.org/bitstream/handle/10568/65374/typology_guidelines.pdf" class="uri">https://cgspace.cgiar.org/bitstream/handle/10568/65374/typology_guidelines.pdf</a></p>
 </div>
 <div id="ref-azzarri2016poverty">
-<p>Azzarri, C., Signorelli, S., &amp; Bacou, M. (2016). <em>Poverty, Land, and Climate in Africa South of the Sahara: an empirical analysis</em>. International Food Policy Research Institute. Retrieved from <a href="https://github.com/mbacou/ssa-geospat/blob/master/docs/Azzarri
-                  (2016) Poverty, land, and climate in Africa south of the Sahara, an
-                  empirical analysis.pdf" class="uri">https://github.com/mbacou/ssa-geospat/blob/master/docs/Azzarri
-                  (2016) Poverty, land, and climate in Africa south of the Sahara, an
-                  empirical analysis.pdf</a></p>
+<p>Azzarri, C., Signorelli, S., &amp; Bacou, M. (2016). <em>Poverty, Land, and Climate in Africa South of the Sahara: an empirical analysis</em>. International Food Policy Research Institute. Retrieved from <a href="https://github.com/mbacou/ssa-geospat/raw/master/docs/Azzarri%20(2016)%20Poverty%2C%20land%2C%20and%20climate%20in%20Africa%20south%20of%20the%20Sahara%2C%20an%20empirical%20analysis.pdf">https://github.com/mbacou/ssa-geospat/raw/master/docs/Azzarri%20(2016)%20Poverty%2C%20land%2C%20and%20climate%20in%20Africa%20south%20of%20the%20Sahara%2C%20an%20empirical%20analysis.pdf</a></p>
 </div>
 <div id="ref-bacou2015ethseg">
 <p>Bacou, M., Magalhaes, E., Hazell, P., &amp; Wood-Sichra, U. (2015). <em>Ethiopia Farm Segmentation Study: Draft report for the Bill and Melinda Gates Foundation</em>. International Food Policy Research Institute. Retrieved from <a href="https://drive.google.com/open?id=0B1o4EXFzqcCzcUJSYlNfZzF5MGs" class="uri">https://drive.google.com/open?id=0B1o4EXFzqcCzcUJSYlNfZzF5MGs</a></p>
