--- a/R/2017-agra-aasr.nb.html
+++ b/R/2017-agra-aasr.nb.html
@@ -602,7 +602,7 @@ This dataset also includes over 2,000 constructed climatic variables (monthly SP
 <p>Jayne, T. S., Chamberlin, J., Traub, L., Sitko, N., Muyanga, M., Yeboah, K., … others. (2015). Africa’s Changing Farmland Ownership: Causes and Consequences. In <em>Plenary paper presented at the 29th international conference of agricultural economists, milan, italy, august 2015</em>. Retrieved from <a href="http://pdf.usaid.gov/pdf_docs/PA00KMWX.pdf" class="uri">http://pdf.usaid.gov/pdf_docs/PA00KMWX.pdf</a></p>
 </div>
 <div id="ref-jayne2015agdev">
-<p>Jayne, T., Yeboah, K., Traub, L., Muyanga, M., Chamberlin, J., &amp; Meyer, F. (2015). How can agricultural development strategies effectively reduce poverty in Africa? Ag. learning lunch seminar, bill and melinda gates foundation. Seattle.</p>
+<p>Jayne, T., Yeboah, K., Traub, L., Muyanga, M., Chamberlin, J., &amp; Meyer, F. (2015). How can Agricultural Development Strategies Effectively Reduce Poverty in Africa?: Ag. Learning Lunch seminar, Bill and Melinda Gates Foundation. Seattle. Retrieved from <a href="https://github.com/mbacou/ssa-geospat/raw/master/docs/Jayne%20(2015)%20Farmer%20Typology.ppt">https://github.com/mbacou/ssa-geospat/raw/master/docs/Jayne%20(2015)%20Farmer%20Typology.ppt</a></p>
 </div>
 <div id="ref-willy2015adaptation">
 <p>Willy, D. K., Muyanga, M., Jayne, T., &amp; others. (2015). <em>Adaptation to Rising Population Density: Voices from Rural Kenya</em>. <em>WPS</em> (Vol. 54/2015). Tegemeo Institute of Agricultural Policy and Development. Retrieved from <a href="https://ideas.repec.org/p/ags/egtewp/208250.html" class="uri">https://ideas.repec.org/p/ags/egtewp/208250.html</a></p>
