--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@ h6 {
 }
 </style>
 
-<link href="data:text/css;charset=utf-8,%0A%0A%0Ahtml%20%7B%0Afont%2Dsize%3A%2013px%3B%0A%7D%0Abody%20%7B%0Afont%2Dfamily%3A%20%27Roboto%20Condensed%27%2C%20Arial%2C%20Helvetica%2C%20sans%2Dserif%3B%0A%7D%0A%2Emarginnote%20%7B%0Aword%2Dwrap%3A%20break%2Dword%3B%0A%7D%0Apre%20%7B%0Awidth%3A%20auto%3B%0Aword%2Dwrap%3A%20break%2Dword%3B%0A%7D%0A%0A" rel="stylesheet" type="text/css" />
 
 </head>
 
@@ -125,7 +124,6 @@ $(document).ready(function () {
 
 <p>Work in progress:</p>
 <ul>
-<li><a href="./R/2017-agra-aasr.html">AGRA AASR 2017 chapter</a> for BMGF</li>
 <li><a href="./R/2016-resilience.nb.html">Tanzania resilience study</a> for IFPRI</li>
 <li><a href="./R/2016-poverty.nb.html">Poverty GWR for SSA</a> for IFPRI</li>
 </ul>
@@ -153,7 +151,7 @@ $(document).ready(function () {
   (function () {
     var script = document.createElement("script");
     script.type = "text/javascript";
-    script.src  = "https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
+    script.src  = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
     document.getElementsByTagName("head")[0].appendChild(script);
   })();
 </script>
